colour Pallete Change

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ProgViz Dashboard | By Code Info</title>
+  <title>ProgViz Dashboard</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome Cdn Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
@@ -12,7 +11,7 @@
     <nav>
       <ul>
         <li><a href="#" class="logo">
-          <img src="./pic/omg.png">
+          <img src="./pic/omg.svg">
           <span class="nav-item">USER</span>
         </a></li>
         <li><a href="#">
@@ -51,29 +50,29 @@
       </div>
       <div class="users">
         <div class="card">
-          <img src="./pic/omg.png">
+          <img src="./pic/omg.svg">
           <h4>Sam David</h4>
           <p>Ui designer</p>
-          <button>Profile</button>
+          <button>LIVE</button>
         </div>
         <div class="card">
-          <img src="./pic/omg.png">
+          <img src="./pic/omg.svg">
           <h4>Balbina kherr</h4>
           <p>Progammer</p>
-          <button>Profile</button>
+          <button>LIVE</button>
         </div>
         <div class="card">
-          <img src="./pic/omg.png">
+          <img src="./pic/omg.svg">
           <h4>Badan John</h4>
           <p>tester</p>
-          <button>Profile</button>
+          <button>LIVE</button>
         </div>
         <div class="card">
-          <img src="./pic/omg.png">
+          <img src="./pic/omg.svg">
           <h4>Salina micheal</h4>
           <p>Ui designer</p>
           
-          <button>Profile</button>
+          <button>LIVE</button>
         </div>
       </div>
 
@@ -129,24 +128,6 @@
                 <td>3:00PM</td>
                 <td><button>View</button></td>
               </tr>
-              <!-- <tr >
-                <td>05</td>
-                <td>Salina</td>
-                <td>Coding</td>
-                <td>03-24-22</td>
-                <td>9:00AM</td>
-                <td>4:00PM</td>
-                <td><button>View</button></td>
-              </tr>
-              <tr >
-                <td>06</td>
-                <td>Tara Smith</td>
-                <td>Testing</td>
-                <td>03-24-22</td>
-                <td>9:00AM</td>
-                <td>4:00PM</td>
-                <td><button>View</button></td>
-              </tr> -->
             </tbody>
           </table>
         </div>
