--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
+  <button class="stream">Go Live</button>
   <div class="container">
     <nav>
       <ul>
