--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>ProgViz Dashboard</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+  <link rel="stylesheet" href="./logstyle.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
+
 <body>
+  <div id="logbox" hidden >
+    <div class="login-box">
+      <h2>Login/Register</h2>
+      <form>
+        <div class="user-box">
+          <input type="text" name="" required="">
+          <label>Username</label>
+        </div>
+        <div class="user-box">
+          <input type="password" name="" required="">
+          <label>Password</label>
+        </div>
+        <a href="#">
+        Submit
+        </a>
+      </form>
+    </div>
+  </div>
   <div class="container">
     <nav>
       <ul>
         <li><a href="#Welcome" class="logo">
-          <img src="./pic/new.svg">
-          <span class="nav-item">Welcome</span>
-        </a></li>
+            <img src="./pic/new.svg">
+            <span class="nav-item">Welcome</span>
+          </a></li>
         <li><a href="#progviz">
-          <i class="fas fa-bullseye"></i>
-          <span class="nav-item">ProgViz</span>
-        </a></li>
+            <i class="fas fa-bullseye"></i>
+            <span class="nav-item">ProgViz</span>
+          </a></li>
         <li><a href="#">
-          <i class="fas fa-star"></i>
-          <span class="nav-item">Special</span>
-        </a></li>
+            <i class="fas fa-star"></i>
+            <span class="nav-item">Special</span>
+          </a></li>
         <li><a href="#">
-          <i class="fas fa-users"></i>
-          <span class="nav-item">Our Team</span>
-        </a></li>
+            <i class="fas fa-users"></i>
+            <span class="nav-item">Our Team</span>
+          </a></li>
         <li><a href="#">
-          <i class="fas fa-chart-bar"></i>
-          <span class="nav-item">Reach</span>
-        </a></li>
+            <i class="fas fa-chart-bar"></i>
+            <span class="nav-item">Reach</span>
+          </a></li>
         <li><a href="#">
-          <i class="fas fa-address-book"></i>
-          <span class="nav-item">Contact us</span>
-        </a></li>
-
-        <li><a href="#" class="logout">
-          <i class="fas fa-sign-out-alt"></i>
-          <span class="nav-item">Log out</span>
-        </a></li>
+            <i class="fas fa-address-book"></i>
+            <span class="nav-item">Contact us</span>
+          </a></li>
       </ul>
     </nav>
 
@@ -46,7 +63,9 @@
     <section class="main">
       <div class="main-top">
         <h1>PROGVIZ</h1>
-        <i class="fas fa-user-cog"><span>Login/Register</span></i>
+        <button onclick="toggle()"><i class="fas fa-user-cog"><span>Login/Register</span></i></button>
+            
+          
       </div>
       <div class="main-banner" id="Welcome">
         <h1>Welcome</h1>
@@ -55,23 +74,38 @@
       </div>
       <div class="main-progviz" id="progviz">
         <div class="main-whatis">
-            <div class="ques1">
-                <h2>What is ProgViz</h2>
-                <p>
-                    ProgViz is a streaming platform only made for programmers and developers. <br>
-                    Who want to learn, progress & share the experience with other developers. <br>
-                    It doesn't matter if you are a beginner intermediate or Expert, <br>
-                    here you can always grow your skills.
-                </p>
-            </div>
-            <div class="quesimg1">
-                <img src="pic/slide1.jpg" alt="">
-            </div>
+          <div class="ques1">
+            <h2>What is ProgViz</h2>
+            <p>
+              ProgViz is a streaming platform only made for programmers and developers. <br>
+              Who want to learn, progress & share the experience with other developers. <br>
+              It doesn't matter if you are a beginner intermediate or Expert, <br>
+              here you can always grow your skills.
+            </p>
+          </div>
+          <div class="quesimg1">
+            <!-- <img src="pic/slide1.jpg" alt=""> -->
+          </div>
         </div>
       </div>
     </section>
   </div>
 
 </body>
-<script src="../src/index.js"></script>
+<!-- <script src="../src/index.js"></script> -->
+<script>
+  function toggle() {
+    console.log("clicked");
+    let element = document.getElementById("logbox");
+    let hidden = element.getAttribute("hidden");
+
+    if (hidden) {
+       element.removeAttribute("hidden");
+      //  button.innerText = "Hide div";
+    } else {
+       element.setAttribute("hidden", "hidden");
+      //  button.innerText = "Show div";
+    }
+  }
+</script>
 </html>
