--- a/public/streamstrt.html
+++ b/public/streamstrt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ProgViz Dashboard</title>
+  <title>ProgViz Starting the Stream</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   
@@ -43,8 +43,6 @@
         </a></li>
       </ul>
     </nav>
-
-
     <section class="main">
       <div class="main-top">
         <h1>PROGVIZ</h1>
@@ -52,12 +50,19 @@
       </div>
       <h2>Start Stream</h2>
       <div class="streq">
-            
+            <form action="" id="requ">
+                <label for="Projectname">Project Name</label>
+                <input type="text" name="Projectname" id="" placeholder="Project Name">
+                <label for="github">Github Link</label>
+                <input type="text" name="github" id="" placeholder="Link for project">
+                <label for="">Keywords</label>
+                <input type="text" name="Projectname" id="">
+                <label for="Projectname">Description</label>
+                <textarea name="desc" id="" cols="30" rows="10" placeholder="Project Description upto 100 Character"></textarea>
+            </form> 
       </div>
     </section>
 
 </body>
 <script src="../src/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </html>
